Fix broken Meta Podcast page, restore Persistence in Meta Index, and harmonize Cowork aBook UI

--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -645,6 +645,39 @@
         const playIcon = '<svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>';
         const pauseIcon = '<svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg>';
 
+        // Persistence
+        function getPersistenceKey(src) {
+            return 'vp_time_' + src.split('/').pop();
+        }
+
+        function setupPersistence(audio) {
+            const key = getPersistenceKey(audio.currentSrc || audio.src);
+            const savedTime = localStorage.getItem(key);
+            if (savedTime && !isNaN(savedTime)) {
+                audio.currentTime = parseFloat(savedTime);
+            }
+            audio.addEventListener('timeupdate', () => {
+                localStorage.setItem(key, audio.currentTime);
+            });
+        }
+
+        // MediaSession
+        function setupMediaSession(audio, metadata) {
+            if ('mediaSession' in navigator) {
+                audio.addEventListener('play', () => {
+                    navigator.mediaSession.metadata = new MediaMetadata(metadata);
+                    navigator.mediaSession.setActionHandler('play', () => audio.play());
+                    navigator.mediaSession.setActionHandler('pause', () => audio.pause());
+                    navigator.mediaSession.setActionHandler('seekbackward', (details) => {
+                        audio.currentTime = Math.max(audio.currentTime - (details.seekOffset || 10), 0);
+                    });
+                    navigator.mediaSession.setActionHandler('seekforward', (details) => {
+                        audio.currentTime = Math.min(audio.currentTime + (details.seekOffset || 10), audio.duration);
+                    });
+                });
+            }
+        }
+
         function initPlayer(id) {
             const audio = document.getElementById(`audio-player-${id}`);
             const progressContainer = document.getElementById(`progress-container-${id}`);
@@ -652,6 +685,21 @@
             const currentTimeEl = document.getElementById(`current-time-${id}`);
             const durationEl = document.getElementById(`duration-${id}`);
             const playBtn = document.getElementById(`play-btn-${id}`);
+
+            // Setup Persistence
+            setupPersistence(audio);
+
+            // Setup MediaSession (Specific for Ep 1 currently)
+            if (id === 1) {
+                setupMediaSession(audio, {
+                    title: "Korrespondenz System Analyse",
+                    artist: "Villa Kunterbunt",
+                    album: "Die Villa Kunterbunt",
+                    artwork: [
+                        { src: "../images/thumbs/das_villa_kunterbunt_kompendium_audiobook_cover_front_thumb.png", sizes: '512x512', type: 'image/png' }
+                    ]
+                });
+            }
 
             audio.addEventListener('timeupdate', () => {
                 const { duration, currentTime } = audio;
