--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -598,7 +598,7 @@
                 </div>
 
                 <div class="volume-control">
-                    <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="1"
+                    <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0.4"
                         oninput="setVolume(this.value)">
                 </div>
             </div>
@@ -634,6 +634,9 @@
         const currentTimeEl = document.getElementById('current-time');
         const durationEl = document.getElementById('duration');
         const playBtn = document.getElementById('play-btn');
+
+        // Set initial volume
+        audio.volume = 0.4;
 
         // Persistence
         function getPersistenceKey(src) {
