--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -635,7 +635,7 @@
                         </div>
 
                         <div class="volume-control">
-                            <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="1"
+                            <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0.4"
                                 oninput="setVolume(1, this.value)">
                         </div>
                     </div>
@@ -1301,6 +1301,9 @@
             const currentTimeEl = document.getElementById(`current-time-${id}`);
             const durationEl = document.getElementById(`duration-${id}`);
             const playBtn = document.getElementById(`play-btn-${id}`);
+
+            // Set initial volume
+            audio.volume = 0.4;
 
             setupPersistence(audio);
             setupMediaSession(audio, id);
