--- a/core/data/main/podcast/korrespondenz_epos.html
+++ b/core/data/main/podcast/korrespondenz_epos.html
@@ -610,7 +610,7 @@
                 </div>
 
                 <div class="volume-control">
-                    <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="1"
+                    <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0.4"
                         oninput="setVolume(this.value)">
                 </div>
             </div>
@@ -703,6 +703,9 @@
                 });
             }
         }
+
+        // Set initial volume
+        audio.volume = 0.4;
 
         setupPersistence(audio);
         setupMediaSession(audio);
