--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -435,10 +435,17 @@
             cursor: default;
         }
 
+        .info-btn.source-btn.has-source {
+            background: rgba(40, 167, 69, 0.15);
+            border-color: rgba(40, 167, 69, 0.3);
+            color: #28a745;
+        }
+
         .info-btn.source-btn.has-source:hover {
-            background: rgba(212, 175, 55, 0.15);
-            border-color: rgba(212, 175, 55, 0.3);
-            color: var(--accent-gold);
+            background: rgba(40, 167, 69, 0.25);
+            border-color: rgba(40, 167, 69, 0.5);
+            color: #34ce57;
+            box-shadow: 0 0 10px rgba(40, 167, 69, 0.2);
         }
 
         .info-text {
@@ -567,7 +574,8 @@
 
                     <div class="info-bar">
                         <button class="info-btn" onclick="toggleInfo(1)">TTS</button>
-                        <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
+                        <button class="info-btn source-btn has-source"
+                            onclick="openSource('../documents/villa_kunterbunt_systemanalytische_studie_und_bewertung.pdf')">Quelle</button>
                     </div>
 
                     <div id="info-text-1" class="info-text">
