Update Meta Podcast content: Titles, Descriptions, and Tags

--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -569,7 +569,7 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">Meta Podcast</div>
+                    <div class="episode-tag">E01: Die erweiterte Studienanalyse</div>
                     <h2 class="episode-title">Korrespondenz System Analyse</h2>
 
                     <div class="info-bar">
@@ -591,8 +591,8 @@
                     </div>
 
                     <div class="episode-description">
-                        Der <strong>Meta-Podcast</strong> zur Villa Kunterbunt. Eine tiefergehende Systemanalyse der
-                        Korrespondenz.
+                        Professionelle Systemanalyse der Villa Kunterbunt: Eine Untersuchung von Legacy-Strukturen,
+                        Sicherheitslücken und Governance-Defiziten aus der Perspektive eines IT-Architekten.
                     </div>
                     <div class="player-controls">
                         <button class="control-btn" onclick="skip(1, -30)" title="-30s">
