--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -670,7 +670,7 @@
     <div class="main-container">
         <header>
             <h1>Die Villa Kunterbunt</h1>
-            <div class="subtitle">Das Kompendium | Korrespondenz System Analyse</div>
+            <div class="subtitle">Das Kompendium | Die erweiterte Studienanalyse</div>
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../main/podcast/index.html" class="action-link">🏰 Das Epos</a>
                 <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
@@ -691,7 +691,7 @@
                 </div>
             </div>
 
-            <div class="episode-tag">Meta Podcast</div>
+            <div class="episode-tag">E01: Die erweiterte Studienanalyse</div>
 
             <div class="info-bar">
                 <button class="info-btn" onclick="toggleInfo()">TTS</button>
@@ -711,8 +711,25 @@
             </div>
 
             <div class="episode-description">
-                Der <strong>Meta-Podcast</strong> zur Villa Kunterbunt. Eine tiefergehende Systemanalyse der
-                Korrespondenz.
+                In dieser Episode erfolgt eine tiefgehende systemtheoretische Dekonstruktion der „Villa Kunterbunt“ als
+                IT-Infrastruktur. Was literarisch als Ort der Freiheit gilt, wird hier unter der Leitung der Moderatorin
+                und eines Experten für Systemanalyse als hochkomplexes, aber instabiles <strong>Legacy-System</strong>
+                analysiert. Die Analyse konzentriert sich primär auf die <strong>Korrespondenzsysteme</strong> und die
+                zugrunde liegende Architektur, wobei die Villa als <strong>monolithisches Gefüge</strong> identifiziert
+                wird, das durch eine extreme Anhäufung technischer Schulden geprägt ist.
+                <br><br>
+                Die zentralen Argumente betreffen die <strong>mangelnde Governance</strong> und die <strong>kritische
+                    Sicherheitsarchitektur</strong> des Standorts. Es wird erörtert, wie das Fehlen einer effektiven
+                Firewall den Zugriff durch externe Akteure wie staatliche Behörden begünstigt, während der „Root-User“
+                Pippi Langstrumpf durch unbeschränkte Privilegien jegliche Standardisierung verhindert. Die Diskussion
+                beleuchtet zudem die asynchronen Kommunikationsprotokolle der Protagonistin sowie die Einbindung
+                heterogener Peripherieeinheiten in das instabile Systemgefüge.
+                <br><br>
+                Der technologische Kontext verknüpft klassische Systemanalyse mit modernen Begriffen der
+                <strong>IT-Security</strong> und des <strong>Prozessmanagements</strong>. Diese Folge bietet für
+                Professionals im Bereich Software-Architektur und Business-Analyse einen innovativen Blickwinkel auf die
+                Bewertung non-konformer Systeme und die Herausforderungen der <strong>Schatten-IT</strong>. Ein präziser
+                Diskurs über die Belastbarkeit chaotischer Strukturen in einer regulatorisch geprägten Welt.
             </div>
 
             <div class="player-controls">
