--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -628,7 +628,8 @@
                                 oninput="setVolume(1, this.value)">
                         </div>
                     </div>
-                    <audio id="audio-player-1" src="../audio/villa_kunterbunt_korrespondenz_system_analyse.mp3"
+                    <audio id="audio-player-1"
+                        src="../audio/das_villa_kunterbunt_kompendium_die_erweiterte_studienanalyse.mp3"
                         preload="metadata"></audio>
                     <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="korrespondenz_system_analyse.html" class="action-link">Zur Folge</a>
